# calc

./: .gitignore  CMakeLists.txt  CMakePresets.json  Expression.cpp  Expression.h  Makefile  README.md  calc.cpp  compile_commands.json
src/: ArgParser.cpp  ArgParser.h  Expression.cpp  Expression.h  debug_main.cpp  main.cpp  tests.cpp
test/: test.cpp
